# arc-kit

./: CHANGELOG.md  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.arckit/templates/: azure-research-template.md  ca-aia-template.md  ca-itsg-33-template.md  traceability-matrix-template.md
.claude-plugin/: marketplace.json
.github/: CODEOWNERS
.github/workflows/: lint-markdown.yml
arckit-claude/: CHANGELOG.md  README.md
arckit-claude/.claude-plugin/: plugin.json
arckit-claude/agents/: READER-PATTERN.md  arckit-aws-research.md  arckit-azure-research.md  arckit-datascout-reader.md  arckit-datascout-writer.md  arckit-datascout.md  arckit-framework.md  arckit-gcp-research.md  arckit-gov-code-search.md  arckit-gov-landscape.md  arckit-gov-reuse-reader.md  arckit-gov-reuse-writer.md  arckit-gov-reuse.md  arckit-grants-reader.md  arckit-grants-writer.md  arckit-grants.md  arckit-research.md
arckit-claude/commands/: ca-aia.md  ca-atip.md  ca-charter.md  ca-cloud-residency.md  ca-fitaa.md  ca-gc-digital-standards.md  ca-itsg-33.md  ca-ocap.md  ca-ola.md  ca-pia.md  ca-pspc.md  ca-soia.md  datascout.md  gov-reuse.md  grants.md  graph-report.md  navigator.md  pages.md
arckit-claude/config/: doc-types.mjs
arckit-claude/hooks/: allow-plugin-internals.mjs  arckit-context.mjs  graph-inject.mjs  graph-utils.mjs  hook-utils.mjs  hooks.json  inject-agent-context.mjs  project-context-builder.mjs  session-learner.mjs  sync-guides.mjs  telemetry.mjs
arckit-claude/schemas/: datascout-handoff.schema.json  gov-reuse-handoff.schema.json  grants-handoff.schema.json
arckit-claude/scripts/: validate-handoff.mjs
arckit-claude/templates/: ca-gc-digital-standards-template.md  ca-ocap-template.md  ca-ola-template.md
arckit-codex/: config.toml
arckit-gemini/: GEMINI.md  README.md  gemini-extension.json
arckit-paperclip/: package.json
docs/: DEPENDENCY-MATRIX.md  README.md  WORKFLOW-DIAGRAMS.md  commands.html  getting-started.html  guides.html  index.html  llms.txt
scripts/: converter.py
(+195 files in other folders)
